# grokitgames

./: CMakeLists.txt  imgui.ini
Messages/: HelloMessage.cpp  HelloMessage.h
Resources/Models/: GizmoRotation.fbx  GizmoScale.fbx  GizmoTranslation.fbx  box.fbx
Resources/Models/Raw/: GizmoRotation.blend  GizmoRotation.blend1  GizmoScale.blend  GizmoScale.blend1  GizmoTranslation.blend  GizmoTranslation.blend1
Resources/Scripting/etc/mono/: config
Resources/Scripting/lib/pkgconfig/: aspnetwebstack.pc  cecil.pc  dotnet.pc  dotnet35.pc  mono-2.pc  mono-cairo.pc  mono.pc  monodoc.pc  monosgen-2.pc  reactive.pc  system.web.extensions.design_1.0.pc  system.web.extensions_1.0.pc  system.web.mvc.pc  system.web.mvc2.pc  system.web.mvc3.pc  wcf.pc
Resources/Shaders/: combine.fs  depth.fs  depth.vs  forward.fs  forward.vs  gaussian.fs  gbuffer.fs  gbuffer.vs  lighting.fs  ortho.fs  skybox.fs  skybox.vs  terrain.fs
Source/Editor/: Editor.pro  Makefile  Makefile.Debug  Makefile.Release  dialogcreateentity.cpp  dialogcreateentity.h  dialogcreateentity.ui  editoropenglwidget.cpp  editoropenglwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metatypes.h  ui_dialogcreateentity.h  ui_mainwindow.h
Source/Editor/Editor/: Editor.pro  Editor.pro.user.4.10-pre1  editor.qrc  editormode.cpp  editormode.h  editorsettings.cpp  editorsettings.h  gigaopenglwidget.cpp  gigaopenglwidget.h  gizmocomponent.cpp  gizmocomponent.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metatypes.h  moc_mainwindow.cpp  moc_modeltest.cpp  moc_newcomponentdialog.cpp  moc_newentitydialog.cpp  moc_newobjectdialog.cpp  moc_objectselectdialog.cpp  moc_treemodel.cpp  modeltest.cpp  newcomponentdialog.cpp  newcomponentdialog.h  newcomponentdialog.ui  newentitydialog.cpp  newentitydialog.h  newentitydialog.ui  newobjectdialog.cpp  newobjectdialog.h  newobjectdialog.ui  objectselectdialog.cpp  objectselectdialog.h  objectselectdialog.ui  propertyformbuilder.cpp  propertyformbuilder.h  qrc_editor.cpp  rotationgizmocomponent.cpp  (+17 more)
Source/Editor/Mono/: Editor.cs
Source/Editor/build-Editor-Desktop_Qt_5_13_0_clang_64bit-Release/: moc_mainwindow.cpp  moc_modeltest.cpp  moc_newcomponentdialog.cpp  moc_newentitydialog.cpp  moc_treemodel.cpp  ui_newcomponentdialog.h
Source/Editor/debug/: moc_dialogcreateentity.cpp  moc_mainwindow.cpp
Source/Engine/Assets/: AssimpImporter.cpp  AssimpImporter.h
Source/Engine/Audio/: AudioComponent.cpp  AudioComponent.h  AudioSystem.cpp  AudioSystem.h  Sound.cpp  Sound.h
Source/Engine/Core/: AppService.h  Application.cpp  Application.h  Array.cpp  Array.h  Component.cpp  Component.h  DataLoader.cpp  DataLoader.h  DataRecord.cpp  DataRecord.h  DateTime.cpp  DateTime.h  Directory.cpp  Directory.h  Entity.cpp  Entity.h  Error.cpp  Error.h  ErrorSystem.cpp  ErrorSystem.h  Giga.h  GigaObject.cpp  GigaObject.h  Message.cpp  Message.h  MessageSystem.cpp  MessageSystem.h  Meta.cpp  Meta.h  MetaSystem.cpp  MetaSystem.h  Serializable.cpp  Serializable.h  System.h  TimeSystem.cpp  TimeSystem.h  Timer.cpp  Timer.h  Transform.cpp  (+11 more)
Source/Engine/GUI/: GuiDropdown.cpp  GuiDropdown.h  GuiWidget.cpp  GuiWidget.h
Source/Engine/IO/: Command.cpp  Command.h  DataLoader.h  InputDevice.h  InputSystem.cpp  InputSystem.h  JSONDataLoader.cpp  JSONDataLoader.h  JSONReader.cpp  JSONReader.h  Keyboard.cpp  Keyboard.h  KeyboardMessage.h  LogSystem.cpp  LogSystem.h  MemoryReader.h  MemoryWriter.h  MySQLDataLoader.cpp  MySQLDataLoader.h  Profiler.cpp  Profiler.h  Resource.cpp  Resource.h  ResourceObject.cpp  ResourceObject.h  ResourceSystem.cpp  ResourceSystem.h  SQLiteDataLoader.cpp  SQLiteDataLoader.h  Serializer.cpp  Serializer.h  Window.cpp  Window.h
Source/Engine/Meta/: MetaData.h  Serialization.cpp  Serialization.h
Source/Engine/Network/: EntitySnapshot.cpp  EntitySnapshot.h  HttpRequest.cpp  HttpRequest.h  NetworkMessage.h  NetworkMessagePart.h  NetworkSession.h  NetworkSystem.cpp  NetworkSystem.h  NetworkSystemInfo.h  ReplicationSystem.cpp  ReplicationSystem.h  UDPSocket.h  UDPSocketBase.cpp  UDPSocketBase.h  UDPSocketPosix.cpp  UDPSocketPosix.h  UDPSocketWin32.cpp  UDPSocketWin32.h
Source/Engine/Network/Messages/: AckMessage.cpp  AckMessage.h  CommandMessage.cpp  CommandMessage.h  EchoRequestMessage.cpp  EchoRequestMessage.h  EchoResponseMessage.cpp  EchoResponseMessage.h  EntitySnapshotMessage.cpp  HelloMessage.h  (+3 more)
Source/Engine/Physics/: BoxCollisionShape.cpp  BoxCollisionShape.h  CollisionShape.h  PhysicsSystem.cpp  PhysicsSystem.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Engine/Render/: AABB.cpp  AABB.h  Animation.cpp  Animation.h  AnimationFrame.cpp  AnimationFrame.h  AnimationInstance.cpp  AnimationInstance.h  AnimationSystem.cpp  AnimationSystem.h  AnimationTransforms.h  AssimpImporter.cpp  AssimpImporter.h  BillboardComponent.cpp  BillboardComponent.h  Bone.cpp  Bone.h  BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  CameraComponent.cpp  CameraComponent.h  DebugRenderSystem.cpp  DebugRenderSystem.h  Defines.h  DepthPass.cpp  DepthPass.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  Filter.cpp  Filter.h  Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  GaussianBlur.cpp  GaussianBlur.h  GuiSystem.cpp  GuiSystem.h  (+61 more)
Source/Engine/Scripting/: MonoComponent.cpp  MonoComponent.h  MonoEntity.cpp  MonoEntity.h  MonoObjects.h  MonoSystem.cpp  MonoSystem.h  Script.h  ScriptCallbackHandler.cpp  ScriptCallbackHandler.h  ScriptComponent.cpp  ScriptComponent.h  ScriptObject.cpp  ScriptObject.h  ScriptThread.cpp  ScriptThread.h  ScriptVariant.cpp  ScriptVariant.h  ScriptingSystem.cpp  ScriptingSystem.h
Source/Game/: main.cpp  register_globals.cpp  register_globals.h
Source/Generator/: Defines.h  Generator.h  MetaClass.cpp  MetaClass.h  MetaGenerator.cpp  MetaGenerator.h  main.cpp
Source/Mono/: GameComponent.cs  GameObject.cs  GameSystem.cs  GigaObject.cs  Quaternion.cs  Vector2.cs  Vector3.cs  Vector4.cs
Source/Server/: main.cpp
Source/TerrainGen/: main.cpp
Source/Workspace/grokitgames.xcworkspace/: contents.xcworkspacedata
(+50 files in other folders)
