cmake_minimum_required(VERSION 2.8)

project(grokitgames)

# options
option(USE_OPENGL "Build the OpenGL renderer" ON)
find_path(DEPENDENCY_PATH "")
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_MACOSX_RPATH 1)

# general setup
find_library(LIBRARY_CLANG clang "${DEPENDENCY_PATH}/clang/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_GLFW glfw3 PATHS "${DEPENDENCY_PATH}/glfw/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_MONO mono-2.0 "${DEPENDENCY_PATH}/mono/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_BULLET_COLLISION BulletCollision "${DEPENDENCY_PATH}/bullet/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_BULLET_DYNAMICS BulletDynamics "${DEPENDENCY_PATH}/bullet/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_BULLET_LINEARMATH LinearMath "${DEPENDENCY_PATH}/bullet/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_LIBCURL curl "${DEPENDENCY_PATH}/libcurl/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_SSL ssl "${DEPENDENCY_PATH}/openssl/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_CRYPTO crypto "${DEPENDENCY_PATH}/openssl/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_ZLIB zlib "${DEPENDENCY_PATH}/zip/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_ASSIMP assimp "${DEPENDENCY_PATH}/assimp/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_IRRXML IrrXML "${DEPENDENCY_PATH}/assimp/lib" NO_DEFAULT_PATH)
find_library(LIBRARY_FMOD fmod "${DEPENDENCY_PATH}/fmod/lib" NO_DEFAULT_PATH)

# set the output directory without the /Debug/ and /Release/ equivalents
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR} )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

# create metacode output directory
file(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/Source/Autogenerated")

# create stub file
file(WRITE "${CMAKE_SOURCE_DIR}/Source/Autogenerated/Metadata.cpp" "// Autogenerated stub file")

# main eternity library
set (ENGINE_SOURCE_FILES "")

macro (list_source_files dir)
	file (GLOB CPP_FILES "${dir}/*.cpp")
	file (GLOB H_FILES "${dir}/*.h")
	
	list (APPEND ENGINE_SOURCE_FILES ${CPP_FILES})
	list (APPEND ENGINE_SOURCE_FILES ${H_FILES})
endmacro()

macro (clear_source_files)
	set (ENGINE_SOURCE_FILES "")
endmacro()

macro (group_source_files folder dir)
	file (GLOB CPP_FILES "${dir}/*.cpp")
	file (GLOB H_FILES "${dir}/*.h")
	
	source_group("${folder}" FILES ${CPP_FILES} ${H_FILES})
endmacro()

set (ENGINE_INCLUDE_DIRS "")
list (APPEND ENGINE_INCLUDE_DIRS "Source/Engine")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/glfw/include")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/glm/include")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/gl3w/include")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/soil/include")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/bullet/include")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/sqlite/include")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/libcurl/include")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/assimp/include")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/openssl/include")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/rapidjson/include")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/fmod/include")
list (APPEND ENGINE_INCLUDE_DIRS "${DEPENDENCY_PATH}/mono/include/mono-2.0")

set (ENGINE_LIBS "")

list (APPEND ENGINE_LIBS ${LIBRARY_GLFW})
list (APPEND ENGINE_LIBS ${LIBRARY_BULLET_COLLISION})
list (APPEND ENGINE_LIBS ${LIBRARY_BULLET_DYNAMICS})
list (APPEND ENGINE_LIBS ${LIBRARY_BULLET_LINEARMATH})
list (APPEND ENGINE_LIBS ${LIBRARY_LIBCURL})
list (APPEND ENGINE_LIBS ${LIBRARY_SSL})
list (APPEND ENGINE_LIBS ${LIBRARY_CRYPTO})
list (APPEND ENGINE_LIBS ${LIBRARY_ASSIMP})
list (APPEND ENGINE_LIBS ${LIBRARY_IRRXML})
list (APPEND ENGINE_LIBS ${LIBRARY_FMOD})
list (APPEND ENGINE_LIBS ${LIBRARY_MONO})

IF(WIN32)
	list (APPEND ENGINE_LIBS "legacy_stdio_definitions.lib")
	list (APPEND ENGINE_LIBS "OpenGL32.lib")
	list (APPEND ENGINE_LIBS "WS2_32.lib")
	list (APPEND ENGINE_LIBS "WinMM.Lib")
	list (APPEND ENGINE_LIBS "AdvAPI32.Lib")
	list (APPEND ENGINE_LIBS "Crypt32.Lib")
	list (APPEND ENGINE_LIBS "Dbghelp.lib")
	list (APPEND ENGINE_LIBS "ShLwApi.Lib")
	list (APPEND ENGINE_LIBS "Wldap32.Lib")
	list (APPEND ENGINE_LIBS "Version.lib")
	list (APPEND ENGINE_LIBS "Bcrypt.lib")
	list (APPEND ENGINE_LIBS ${LIBRARY_ZLIB})
ENDIF()

IF(APPLE)
	list (APPEND ENGINE_LIBS "-framework IOKit")
	list (APPEND ENGINE_LIBS "-framework Cocoa")
	list (APPEND ENGINE_LIBS "-framework CoreVideo")
	list (APPEND ENGINE_LIBS "-framework CoreAudio")
	list (APPEND ENGINE_LIBS "-framework OpenGL")
	list (APPEND ENGINE_LIBS "-framework Security")
	list (APPEND ENGINE_LIBS "z")
	list (APPEND ENGINE_LIBS "iconv")
ENDIF()

##
## engine core
##

list_source_files("Source/Engine/Core")
group_source_files("Source" "Source/Engine/Core")
add_library(core STATIC ${ENGINE_SOURCE_FILES})
target_include_directories(core PRIVATE ${ENGINE_INCLUDE_DIRS})
set_property(TARGET core APPEND PROPERTY COMPILE_DEFINITIONS "_CRT_SECURE_NO_WARNINGS")
set_property(TARGET core APPEND PROPERTY COMPILE_DEFINITIONS "GIGA_EXPORTS")
target_include_directories(core PRIVATE "Source/Engine")

clear_source_files()

##
## engine network
##

list_source_files("Source/Engine/Network")
group_source_files("Source" "Source/Engine/Network")
add_library(networking STATIC ${ENGINE_SOURCE_FILES})
target_include_directories(networking PRIVATE ${ENGINE_INCLUDE_DIRS})
set_property(TARGET networking APPEND PROPERTY COMPILE_DEFINITIONS "CURL_STATICLIB")
set_property(TARGET networking APPEND PROPERTY COMPILE_DEFINITIONS "GIGA_EXPORTS")
target_link_libraries(networking "core")

clear_source_files()

##
## engine IO
##

list_source_files("Source/Engine/IO")
group_source_files("Source" "Source/Engine/IO")
add_library(io STATIC ${ENGINE_SOURCE_FILES}  "${DEPENDENCY_PATH}/sqlite/src/sqlite3.c")
target_include_directories(io PRIVATE ${ENGINE_INCLUDE_DIRS})
set_property(TARGET io APPEND PROPERTY COMPILE_DEFINITIONS "GIGA_EXPORTS")
set_property(TARGET io APPEND PROPERTY COMPILE_DEFINITIONS)
target_link_libraries(io "core" ${ENGINE_LIBS})

clear_source_files()

##
## engine render
##

list_source_files("Source/Engine/Render")
list_source_files("Source/Engine/Render/OpenGL")
list_source_files("Source/Engine/Render/Pipelines")
list_source_files("Source/Engine/Render/Pipelines/Deferred")
group_source_files("Source" "Source/Engine/Render")
group_source_files("Source\\\\OpenGL" "Source/Engine/Render/OpenGL")
group_source_files("Source\\\\Pipelines" "Source/Engine/Render/Pipelines")
group_source_files("Source\\\\Pipelines\\\\Deferred" "Source/Engine/Render/Pipelines/Deferred")
add_library(render STATIC ${ENGINE_SOURCE_FILES} "${DEPENDENCY_PATH}/gl3w/src/gl3w.c" "${DEPENDENCY_PATH}/soil/src/SOIL.c" "${DEPENDENCY_PATH}/soil/src/image_helper.c" "${DEPENDENCY_PATH}/soil/src/image_dxt.c" "${DEPENDENCY_PATH}/soil/src/stb_image_aug.c")
set_property(TARGET render APPEND PROPERTY COMPILE_DEFINITIONS "GIGA_EXPORTS")
target_include_directories(render PRIVATE ${ENGINE_INCLUDE_DIRS})
target_link_libraries(render "core" "io" ${ENGINE_LIBS})

clear_source_files()

##
## engine audio
##

list_source_files("Source/Engine/Audio")
group_source_files("Source" "Source/Engine/Audio")
add_library(audio STATIC ${ENGINE_SOURCE_FILES})
set_property(TARGET audio APPEND PROPERTY COMPILE_DEFINITIONS "GIGA_EXPORTS")
target_include_directories(audio PRIVATE ${ENGINE_INCLUDE_DIRS})
target_link_libraries(audio "core" "io")

clear_source_files()

#
## engine physics
##

list_source_files("Source/Engine/Physics")
group_source_files("Source" "Source/Engine/Physics")
add_library(physics STATIC ${ENGINE_SOURCE_FILES})
set_property(TARGET physics APPEND PROPERTY COMPILE_DEFINITIONS "GIGA_EXPORTS")
target_include_directories(physics PRIVATE ${ENGINE_INCLUDE_DIRS})
target_link_libraries(physics "core" ${ENGINE_LIBS})

clear_source_files()

#
## engine gui framework
##

list_source_files("Source/Engine/Gui")
group_source_files("Source" "Source/Engine/Gui")
add_library(gui STATIC ${ENGINE_SOURCE_FILES})
set_property(TARGET gui APPEND PROPERTY COMPILE_DEFINITIONS "GIGA_EXPORTS")
target_include_directories(gui PRIVATE ${ENGINE_INCLUDE_DIRS})
target_link_libraries(gui "core" "render" "audio" ${ENGINE_LIBS})

clear_source_files()

##
## metacode generator 
##

set (GENERATOR_INCLUDE_DIRS "")
list (APPEND GENERATOR_INCLUDE_DIRS "Source/Generator")
list (APPEND GENERATOR_INCLUDE_DIRS "Source/Engine")
list (APPEND GENERATOR_INCLUDE_DIRS "${DEPENDENCY_PATH}/clang/include")
list (APPEND GENERATOR_INCLUDE_DIRS "${DEPENDENCY_PATH}/glm/include")
list (APPEND GENERATOR_INCLUDE_DIRS "${DEPENDENCY_PATH}/openssl/include")
list (APPEND GENERATOR_INCLUDE_DIRS "${DEPENDENCY_PATH}/sqlite/include")

add_executable(generator Source/Generator/main.cpp Source/Generator/MetaClass.cpp)

target_include_directories(generator PRIVATE ${GENERATOR_INCLUDE_DIRS})
target_link_libraries(generator ${LIBRARY_CLANG} ${LIBRARY_CRYPTO} "core" "io")

# create the execution as a custom target
add_custom_target(
	generator-prebuild
	COMMAND $<TARGET_FILE:generator> "${CMAKE_SOURCE_DIR}/Source/Engine"
)

##
## build mono engine library
##


add_custom_target(
	generator-mono
	COMMAND ${DEPENDENCY_PATH}/mono/bin/mcs ${CMAKE_SOURCE_DIR}/Source/Autogenerated/CSharp/*.cs ${CMAKE_SOURCE_DIR}/Source/Mono/*.cs -target:library -out:${CMAKE_SOURCE_DIR}/Resources/Scripting/GIGAEngine.dll
)

add_dependencies(generator-mono generator-prebuild)

##
## build mono editor library
##


add_custom_target(
	editor-mono
	COMMAND ${DEPENDENCY_PATH}/mono/bin/mcs ${CMAKE_SOURCE_DIR}/Source/Editor/Mono/*.cs -lib:${CMAKE_SOURCE_DIR}/Resources/Scripting -r:GIGAEngine.dll -target:library -out:${CMAKE_SOURCE_DIR}/Resources/Scripting/GIGAEditor.dll
)

add_dependencies(editor-mono generator-mono)

#
## engine scripting
##

list_source_files("Source/Engine/Scripting")
group_source_files("Source" "Source/Engine/Scripting")
add_library(scripting STATIC ${ENGINE_SOURCE_FILES} "Source/Autogenerated/MonoBindings.cpp")
set_property(TARGET scripting APPEND PROPERTY COMPILE_DEFINITIONS "GIGA_EXPORTS")
target_include_directories(scripting PRIVATE ${ENGINE_INCLUDE_DIRS})
target_link_libraries(scripting "core" "io" "networking" "render" "audio" "physics" "gui" ${ENGINE_LIBS})

add_dependencies(scripting generator-mono)

clear_source_files()

##
## engine metadata
##

add_library(meta STATIC "Source/Autogenerated/Metadata.cpp")
group_source_files("Source" "Source/Autogenerated")
target_include_directories(meta PRIVATE ${ENGINE_INCLUDE_DIRS})
target_link_libraries(meta "core" "networking" "render" "audio" "physics" "io" "scripting" "gui")

add_dependencies(meta generator-prebuild)



##
## game client
##

add_executable(game Source/Game/main.cpp Source/Game/register_globals.cpp)

set_property(TARGET game APPEND PROPERTY COMPILE_DEFINITIONS)
set_property(TARGET game APPEND PROPERTY COMPILE_DEFINITIONS "CURL_STATICLIB")
set_property(TARGET game APPEND PROPERTY COMPILE_DEFINITIONS "_CRT_SECURE_NO_WARNINGS")

target_link_libraries(game ${ETERNITY_LIBS} "core" "networking" "meta" "render" "audio" "physics" "io" "scripting" "gui")
target_include_directories(game PRIVATE ${ENGINE_INCLUDE_DIRS})
add_dependencies(game core networking generator-mono editor-mono)

# game server

add_executable(server Source/Server/main.cpp)

set_property(TARGET server APPEND PROPERTY COMPILE_DEFINITIONS)
set_property(TARGET server APPEND PROPERTY COMPILE_DEFINITIONS "CURL_STATICLIB")
set_property(TARGET server APPEND PROPERTY COMPILE_DEFINITIONS "_CRT_SECURE_NO_WARNINGS")

target_link_libraries(server ${ETERNITY_LIBS} "core" "networking" "meta" "render" "audio" "physics" "io" "scripting" "gui")
target_include_directories(server PRIVATE ${ENGINE_INCLUDE_DIRS})
add_dependencies(server core networking generator-mono editor-mono)